# chihiros-led-control

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHIHIROS_BLE_PROTOCOL.md  LICENSE  README.md  chihirosctl.py  commands.py  controller.py  docker-compose.bluetooth.yml  docker-compose.yml  hacs.json  info.md  pyproject.toml  requirements.txt  setup.cfg  weekday_encoding.py
.github/workflows/: hacs-verification.yaml  pre-commit.yaml  release.yaml  validation.yaml
chihiros_led_control/: chihirosctl.py  commands.py  const.py  weekday_encoding.py
chihiros_led_control/device/: __init__.py  base_device.py  fallback.py  tiny_terrarium_egg.py
custom_components/chihiros/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  discovery.py  dosing.py  dosingpump.py  entity.py  fake.py  light.py  manifest.json  models.py  number.py  runtime.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/chihiros/chihiros_doser_control/: __init__.py  chihirosdoserctl.py  doser_device.py  dosingpump.py  protocol.py
custom_components/chihiros/chihiros_doser_control/Archive Code/: __init__prior bleak client.py  protocol 25 chunk.py  protocol bkup.py
custom_components/chihiros/chihiros_doser_control/device/: doser.py  doser_device.py
custom_components/chihiros/chihiros_led_ch4_control/: chihirosch4ctl.py
custom_components/chihiros/chihiros_led_ch4_control/device/: __init__.py  ch4.py  ch4_device.py  commander1.py  commander4.py  universal_wrgb.py  wrgb2_pro.py
custom_components/chihiros/chihiros_led_control/: __init__.py  chihirosctl.py  commands.py  const.py  exception.py  weekday_encoding.py
custom_components/chihiros/chihiros_led_control/device/: __init__.py  a2.py  a_ii_a2.py  backlight.py  base_device.py  c2.py  c2rgb.py  commander1.py  commander4.py  doser.py  fallback.py  generic_rgb.py  generic_white.py  generic_wrgb.py  tiny_terrarium_egg.py  universal_wrgb.py  wrgb2.py  wrgb2_pro.py  wrgb2_slim.py  z_light_tiny.py
custom_components/chihiros/translations/: en.json
dev/homeassistant/config/: configuration.yaml
docs/: architecture.md  esphome-protocol-findings.md  home-assistant-docker.md  protocol.md
scripts/: sync_vendor.py
src/chihiros_led_control/: cli.py  client.py  commands.py  const.py  factory.py  models.py  protocol.py
tests/: test_cli.py  test_client.py  test_factory.py  test_home_assistant_integration.py  test_manifest_requirements.py  test_protocol.py  test_schedule_validation.py  test_sync_vendor.py  test_weekday_encoding.py
