[build-system]
requires = [
    "setuptools==78.1.1",
    "setuptools_scm[toml]==8.2.0",
    "wheel==0.46.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "chihiros-led-control"
dynamic = ["version"]
description = "Chihiros LED control without the official vendor app"
readme = "README.md"
authors = [
    {name = "Michael Dietrich", email = "github@mi-dietrich.de"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["chihiros", "bluetooth", "lib"]

requires-python = ">=3.13"
dependencies = [
    "bleak>=0.22.3",
    "bleak-retry-connector==4.6.1",
    "click<8.2",
    "rich==13.9.4",
    "typer==0.15.2",
]

[project.optional-dependencies]
cli = [
    "click<8.2",
    "rich==13.9.4",
    "typer==0.15.2",
]

[dependency-groups]
test = [
    "pytest==9.0.3",
]
dev = [
    "click<8.2",
    "doc8==1.1.1",
    "pre-commit==3.7.1",
    "pytest==9.0.3",
    "rich==13.9.4",
    "ruff==0.15.16",
    "typer==0.15.2",
]

[project.urls]
"Source Code" = "https://github.com/TheMicDiet/chihiros-led-control"
"Bug Reports" = "https://github.com/TheMicDiet/chihiros-led-control/issues"
"Home-page"   = "https://github.com/TheMicDiet/chihiros-led-control"

[tool.setuptools]
platforms = ["any"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "chihiros_led_control*",
]

[tool.setuptools_scm]


[project.scripts]
chihirosctl = "chihiros_led_control.cli:app"

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120
target-version = "py313"
force-exclude = true
extend-exclude = [
    "custom_components/chihiros/vendor",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D203",
    "D213",
]
