# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://github.com/TheMicDiet/chihiros-led-control

# https://github.com/renovatebot/renovate/issues/10187
[options]
install_requires =
    bleak==0.21.1
    bleak_retry_connector==3.5.0
    typer[all]==0.9.0
    rich==13.7.1
