# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://github.com/TheMicDiet/chihiros-led-control

# https://github.com/renovatebot/renovate/issues/10187
[options]
install_requires =
    bleak==0.22.3
    bleak_retry_connector==3.9.0
    typer[all]==0.15.2
    rich==13.9.4
    python_requires = >=3.12

[options.extras_require]
ha =
    homeassistant>=2024.6
    home-assistant-bluetooth>=1.10.5
    voluptuous>=0.13
dev =
    pytest
    pytest-asyncio
    ruff
    mypy
